--- a/faultplugin/Makefile
+++ b/faultplugin/Makefile
@@ -33,6 +33,8 @@ CFLAGS += $(if $(findstring no-psabi,$(QEMU_CFLAGS)),-Wpsabi)
 CFLAGS += -I$(SRC_PATH)/include
 #CFLAGS += -I$(SRC_PATH)/include/hw/core
 CFLAGS += -I$(BUILD_DIR)
+# Used for protobuf
+LDLIBS = -lprotobuf-c
 all: $(SONAMES)
 
 lib/avl.o: lib/avl.c
@@ -62,10 +64,13 @@ tb_exec_data_collection.o: tb_exec_data_collection.c
 tb_faulted_collection.o : tb_faulted_collection.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
+fault.pb-c.o: fault.pb-c.c
+	$(CC) $(CFLAGS) -c -o $@ $<
+
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-lib%.so: %.o lib/avl.o faultdata.o registerdump.o singlestep.o fault_list.o fault_injection.o tb_info_data_collection.o tb_exec_data_collection.o tb_faulted_collection.o
+lib%.so: %.o lib/avl.o faultdata.o registerdump.o singlestep.o fault_list.o fault_injection.o tb_info_data_collection.o tb_exec_data_collection.o tb_faulted_collection.o fault.pb-c.o
 	$(CC) -shared -Wl,-soname,$@ -o $@ $^ $(LDLIBS)
 
 clean:
