Use protobuf for communication on data pipe
Create protobuf schema for communication on data pipe and update code to
use protobuf for transfer the result information back to python side.

Use enums for registers

--- a/faultplugin/Makefile
+++ b/faultplugin/Makefile
@@ -70,10 +70,13 @@ fault.pb-c.o: fault.pb-c.c
 control.pb-c.o: control.pb-c.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
+data.pb-c.o: data.pb-c.c
+	$(CC) $(CFLAGS) -c -o $@ $<
+
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-lib%.so: %.o lib/avl.o faultdata.o registerdump.o singlestep.o fault_list.o fault_injection.o tb_info_data_collection.o tb_exec_data_collection.o tb_faulted_collection.o fault.pb-c.o control.pb-c.o
+lib%.so: %.o lib/avl.o faultdata.o registerdump.o singlestep.o fault_list.o fault_injection.o tb_info_data_collection.o tb_exec_data_collection.o tb_faulted_collection.o fault.pb-c.o control.pb-c.o data.pb-c.o
 	$(CC) -shared -Wl,-soname,$@ -o $@ $^ $(LDLIBS)
 
 clean:
